--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,6 @@ edition = "2024"
 
 [dependencies]
 clap = { version = "4.5.46", features = ["derive"] }
+serde = { version = "1.0.219", features = ["derive"] }
+directories = "5.0"
+toml = "0.8"
