--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,10 @@
 name = "forest"
 version = "0.1.0"
 edition = "2024"
+license = "MIT OR Apache-2.0"
+description = "A tool that manages worktrees for you"
+homepage = "https://github.com/tcione/forest"
+repository = "https://github.com/tcione/forest"
 
 [dependencies]
 clap = { version = "4.5.46", features = ["derive"] }
