--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,7 @@ jobs:
           toolchain: stable
 
       - name: Run tests
-        run: cargo test
+        run: cargo test --all-features
 
   build:
     needs: test
